tests/negative/invalid-names.sp
(* only vars staring with _a-zA-Z *)
0invliadVar:Int;
